--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,12 @@ input[type="radio"].invisible,
 }
 
 .btn {
+	display: block;
+	
   color: #fff;
   font-size: 21px;
   line-height: 26px;
-  font-weight: 700;
+  font-weight: 600;
 	text-transform: uppercase; 
 	
 	border: none;
@@ -78,7 +80,7 @@ input {
 
 .main-nav {
   line-height: 26px;
-  font-weight: 700;
+  font-weight: 600;
   color: #000;  
 }
 
@@ -133,16 +135,20 @@ input {
   color: #000;
 }
 
-.site-nav a:hover,
-.site-nav a:focus {
+.site-nav a:not(.current-page):hover,
+.site-nav a:not(.current-page):focus {
   color: #81b3d2;
 }
 
-.site-nav a:active {
+.site-nav a:not(.current-page):active {
   color: inherit;
   opacity: 0.3;
 }
 
+.site-nav .current-page {
+	color: #766357;
+	cursor: default;
+}
 /****************************************************************************/
 
 .intro {
@@ -178,7 +184,7 @@ input {
 	
   font-size: 21px;
   line-height: 26px;
-  font-weight: 700; 
+  font-weight: 600; 
   color: #000;
 }
 
@@ -218,7 +224,7 @@ input {
 	margin: 0 50px 25px;
 	
 	font-size: 21px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .feature-list p {
@@ -418,7 +424,7 @@ li.normal-feature-item {
 	
 	color: #000;
   line-height: 26px;
-  font-weight: 700;
+  font-weight: 600;
 	
 	background-color: #fff;
 	box-shadow: 0 7px 15px rgba(0,1,1,0.15);
@@ -463,7 +469,7 @@ li.normal-feature-item {
 	
 	color: #000;
   line-height: 26px;
-  font-weight: 700;
+  font-weight: 600;
 	
 	background-color: #f2f2f2;
 	border: none;
@@ -561,7 +567,7 @@ li.normal-feature-item {
 	display: flex;
 	justify-content: space-between;
 	
-	padding: 27px 6%;
+	padding: 27px 6% 32px;
 	color: #fff;
 }
 
@@ -572,7 +578,6 @@ li.normal-feature-item {
 	border: none;
 }
 
-
 .filter-form fieldset:last-child {
 	margin-left: auto;
 }
@@ -580,7 +585,7 @@ li.normal-feature-item {
 .filters legend{
 	font-size: 16px;
 	line-height: 21px;
-	font-weight: 700;
+	font-weight: 600;
 }
 
 .filter-list {
@@ -604,22 +609,21 @@ input[type="checkbox"] {
     opacity: 0;
 }
 
+input[type="checkbox"] + label {
+    padding: 0;
+    cursor: pointer;
+}
+
 input[type="checkbox"]:not(:checked) + label::before{
-	content: "";
-	
-	position: absolute;
-	width: 23px;
-	height: 23px;
-	
-	top: 0;
-	left: 0;
-	
 	background-image: url("../img/checkbox-off.svg");
-	background-repeat: no-repeat;
-	background-position: center;
 }
 
 
+input[type="checkbox"]:checked + label::before{
+	background-image: url("../img/checkbox-on.svg");
+}
+
+input[type="checkbox"]:not(:checked) + label::before,
 input[type="checkbox"]:checked + label::before{
 	content: "";
 	
@@ -629,73 +633,277 @@ input[type="checkbox"]:checked + label::before{
 	
 	top: 0;
 	left: 0;
-	
-	background-image: url("../img/checkbox-on.svg");
+
 	background-repeat: no-repeat;
 	background-position: center;
 }
 
+input[type="checkbox"]:focus + label::before {
+  outline: -webkit-focus-ring-color auto 5px;
+}
 
+input[type="checkbox"]:disabled + label::before,
+input[type="checkbox"]:disabled + label {
+  opacity: 0.5;
+	cursor: default;
+}
 
+.filter-range {
+	width: 317px;
+}
 
+.price-controls {
+	position: relative;
+	margin: 9px 0 20px;
+	
+	height: 34px;
+	border: 2px solid #fff;
+	border-radius: 2px;
+	
+	font-size: 0;
+}
 
+.price-controls::before {
+	content: "";
+	
+	position: absolute;
+	
+	height: 22px;
+	width: 2px;
+	
+	top: 50%;
+	left: 50%;
+	transform: translate(50%,-50%);
+	
+	background-color: #fff;
+}
 
+.price-controls label {
+	display: inline-block;
+	
+	vertical-align: top;
+	font-size: 14px;
+	line-height: 34px;
+	
+	cursor: pointer;
+}
 
+.price-controls input{
+	width: 50px;
+	margin: 0;
+	
+	font: inherit;
+	color: inherit;
+	
+	border: none;
+	background: none;
+}
 
+.price-controls .min-price,
+.price-controls .max-price {
+	width: 80px;
+	margin-left: 65px;
+}
 
+.range-controls {
+	position: relative;
+	margin-bottom: 30px;
+}
 
+.range-controls .scale {
+	height: 2px;
+	background-color: rgba(255,255,255,0.3);
+}
 
+.range-controls .bar {
+	width: 80%;
+	height: 2px;
+	background-color: #fff;
+}
 
+.range-toggle {
+	position: absolute;
+	top: -9px;
+	
+	width: 4px;
+	height: 4px;
+	
+	background-color: #ababab;	
+	border: 8px solid #fff;
+	border-radius: 50%;
+	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
 
+.range-toggle:hover,
+.range-toggle:focus {
+		border-width: 9px;
 
+}
+.range-toggle-min {
+	left: 0;
+}
 
+.range-toggle-max {
+	left: 80%;
+}
 
+.filter-btn {
+	display: block;
+	margin: 0 auto;
+	padding: 6px 33px;	
+	
+	font: inherit;
+	
+	background-color: transparent;
+	border: 2px solid #fff;
+	border-radius: 2px;
+}
 
+.filter-btn:hover,
+.filter-btn:focus {
+	background-color: #fff;
+	color: #000;
+}
 
-
-
-
-
+/********************************results*********************************/
 
 .result {
 }
 
+.sort {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 30px 6%;
+}
+
 .total {
-	font-size: 16px;
-	line-height: 21px;
-	font-weight: 700;
+	margin: 0 50px 0 0;
+
+	font-size: 21px;
+	line-height: 26px;
+	font-weight: 600;
 }
 
 .sort h3 {
+	margin: 0;
+
 	font-size: 12px;
 	line-height: 18px;
 }
 
 .sort-list {
+	display: flex;
+	flex-direction: row;
+	
+	margin: 0;	
+	padding: 0;	
+	
+	font-size: 12px;
+	line-height: 18px;
 	list-style: none;
 }
 
-.sort-list li {
-	opacity: 0.3;
+.sort-item {
+	margin-left: 35px;
 }
 
-.sort-list li:hover,
-.sort-list li:focus {
+.sort-item a {
+	color: rgba(0,0,0,0.3);
+	font: 12px;
+	line-height: 18px;
+	
+	border-bottom: 1px dotted #81b3d2;
+}
+
+
+.sort-item a:not(.active):hover,
+.sort-item a:not(.active):focus {
 	color: #81b3d2;
-	opacity: 1;
-
 }
 
-.sort-list li:active {
-	color: #000;
-	opacity: 1;
+.sort-item a:not(.active):active {
+	color: #000;	
+	border: none;
+}
+
+.sort-item .active {
+	color: #81b3d2;
+	border: none;
+
+	cursor: default;
+}
+
+.sorting-controls {
+	margin: 0 0 0 auto;
+}
+
+.sorting-controls a {
+	padding-left: 7px;
+}
+
+.sorting-controls a:hover path,
+.sorting-controls a:focus path {
+	fill: #231F20;
+}
+
+.sorting-controls a:active path,
+.sorting-controls .current path {
+	fill: #81b3d2;
+}
+
+/********************************items*********************************/
+
+.result-items {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	border-bottom: 1px solid #e5e5e5;
+}
+
+.result-items li {
+	display: flex;
+	height: 151px;
+	
+	box-sizing: border-box;
+	
+	padding: 30px 6%;
+	
+	border-top: 1px solid #e5e5e5;
+}
+
+.img-item {
+	width: 135px;
+}
+
+.description-item {
+	width: 780px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	
+	display: flex;
+	align-content: space-between;
+	flex-wrap: wrap;
+
+	padding: 0 30px;
 }
 
 .item-title {
-	color: #000;
-	font-size: 16px;
-	line-height: 21px;
-	font-weight: 700;
+	flex-basis: 100%;
+	
+	margin-bottom: auto;
+}
+
+.item-title h3 {
+	margin: 0;
+	margin-top: -5px;
+	
+	color: #000; 	
+	font-size: 21px;	
+	line-height: 26px;
+	font-weight: 600;
 }
 
 .item-title:hover,
@@ -705,6 +913,26 @@ input[type="checkbox"]:checked + label::before{
 
 .item-title:active {
 	opacity: 0.3;
+}
+
+
+.item-wrapper {
+	margin-right: 5px;
+}
+
+.item-wrapper p {
+	margin: 0;
+}
+
+.detail-btn, 
+.booking-btn {
+	margin-top: 14px;
+	padding: 3px 17px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	
+	font: inherit;
 }
 
 .detail-btn {
@@ -734,8 +962,23 @@ input[type="checkbox"]:checked + label::before{
 	background-color: #503e33;
 	color: rgba(255,255,255,0.3);
 } 
+/****************************************************************************/
+
+.rating-item {
+	margin-left: auto;
+	display: flex;
+	flex-direction: column;	
+	align-items: flex-end;
+}
+
+.star-rating {
+	margin: 0;
+	margin-bottom: auto;
+}
 
 .rating {
+	padding: 3px 17px;
+	
 	color: #666;
 	font-size: 14px;
 	
@@ -768,7 +1011,7 @@ input[type="checkbox"]:checked + label::before{
 	
 	font-size: 21px;
   line-height: 26px;
-  font-weight: 700;
+  font-weight: 600;
   color: #000;
 	text-align: center;
 }
