--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .site-wrapper {
-	min-width: 867px;
+	min-width: 768px;
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0;
@@ -88,14 +88,16 @@ input {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 }
 
 .site-nav {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	
 	margin: 0;
 	padding: 0;
 		
@@ -154,7 +156,8 @@ input {
 .intro {
 	height: 508px;
 	padding-top: 76px;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	
 	text-align: center;
 	
@@ -180,7 +183,7 @@ input {
 }
 
 .features h2 {
-	margin: 0 300px 30px;
+	margin: 0 25% 30px;
 	
   font-size: 21px;
   line-height: 26px;
@@ -197,9 +200,14 @@ input {
 /****************************************************************************/
 
 .feature-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;	
-	justify-content: center;
-	flex-wrap: wrap;
+	-webkit-box-pack: center;	
+	    -ms-flex-pack: center;	
+	        justify-content: center;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	
 	margin: 0;	
 	padding: 0;
@@ -212,23 +220,30 @@ input {
 	background-color: #eee;
 }
 
-.feature-list li {
+.feature-list > li {
 	width: 100%;
 	min-height: 256px;
 	
+	display: -webkit-box;
+	
+	display: -ms-flexbox;
+	
 	display: flex;	
-	justify-content: space-between;
+	-webkit-box-pack: justify;	
+	    -ms-flex-pack: justify;	
+	        justify-content: space-between;
 }
 
 .feature-list h3 {
-	margin: 0 50px 25px;
+	margin: 0 18% 25px;
 	
 	font-size: 21px;
   font-weight: 600;
 }
 
 .feature-list p {
-		margin: 0;
+	margin: 0;
+	margin-bottom: auto;
 }
 
 /****************************************************************************/
@@ -240,16 +255,17 @@ input {
 }
 
 .wide-feature-item:nth-child(3) .feature-item-text {
-	order: 2;
+	-webkit-box-ordinal-group: 3;
+	    -ms-flex-order: 2;
+	        order: 2;
 }
 
 .feature-item-text {
 	width: 33%;
 		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
-	padding: 46px 50px 60px;
+	padding: 46px 4% 60px;
 }
 
 .feature-item-text p:first-of-type,
@@ -263,28 +279,39 @@ input {
 
 
 .advice-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding: 0;
 
 	background-color: #fff;
+	list-style: none;
 }
 
 .advice-list li {
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	position: relative;
 
 	width: 33%;
 	min-height: 330px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 160px 50px 82px;
 }
+
 .advice-list li:first-child::before {
 	content: "";
 	position: absolute;
@@ -293,7 +320,9 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	
 	background-image: url("../img/house.svg");
 	background-repeat: no-repeat;
@@ -307,7 +336,9 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	
 	background-image: url("../img/burger.svg");
 	background-repeat: no-repeat;
@@ -321,7 +352,9 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	
 	background-image: url("../img/gift.svg");
 	background-repeat: no-repeat;
@@ -330,13 +363,18 @@ input {
 /****************************************************************************/
 
 li.normal-feature-item {
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	width: 33%;	
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 46px 90px 60px;
@@ -351,7 +389,8 @@ li.normal-feature-item {
 
 .hotel-search {
 	width: 100%;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	
 	padding-top: 50px;
 	
@@ -375,9 +414,16 @@ li.normal-feature-item {
 }
 
 .hotel-search-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	position: relative;
 	
@@ -385,7 +431,6 @@ li.normal-feature-item {
 	padding: 0;
 	
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -410,14 +455,22 @@ li.normal-feature-item {
 .hotel-search-form {
 	position: absolute;
 	top: 85px;
+	left: 50%;
+	margin-left: -284px;
+	
+	display: -webkit-box;
+	
+	display: -ms-flexbox;
 	
 	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	
 	width: 568px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 56px 55px;
@@ -427,12 +480,17 @@ li.normal-feature-item {
   font-weight: 600;
 	
 	background-color: #fff;
-	box-shadow: 0 7px 15px rgba(0,1,1,0.15);
+	-webkit-box-shadow: 0 7px 15px rgba(0,1,1,0.15);
+	        box-shadow: 0 7px 15px rgba(0,1,1,0.15);
 }
 
 .hotel-search-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	width: 460px;
 	height: 38px;
@@ -462,7 +520,6 @@ li.normal-feature-item {
 	width: 308px;
 	height: 38px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 0 13px;
@@ -494,14 +551,19 @@ li.normal-feature-item {
 }
 
 .form-btn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	width: 38px;
 	height: 38px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 0;
@@ -527,7 +589,6 @@ li.normal-feature-item {
 .search-btn {
 	width: 100%;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 16px;
@@ -551,7 +612,12 @@ li.normal-feature-item {
 	background-repeat: no-repeat;
 	width: 100%;
 	height: 593px;
-	
+}
+
+.map .google-map {
+	width: 100%;
+	height: 593px;
+	border: none;
 }
 
 /*********************************Inner page*********************************/
@@ -564,8 +630,12 @@ li.normal-feature-item {
 }
 
 .filter-form {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	
 	padding: 27px 6% 32px;
 	color: #fff;
@@ -673,7 +743,9 @@ input[type="checkbox"]:disabled + label {
 	
 	top: 50%;
 	left: 50%;
-	transform: translate(50%,-50%);
+	-webkit-transform: translate(50%,-50%);
+	    -ms-transform: translate(50%,-50%);
+	        transform: translate(50%,-50%);
 	
 	background-color: #fff;
 }
@@ -731,7 +803,8 @@ input[type="checkbox"]:disabled + label {
 	background-color: #ababab;	
 	border: 8px solid #fff;
 	border-radius: 50%;
-	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+	-webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+	        box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -772,9 +845,15 @@ input[type="checkbox"]:disabled + label {
 }
 
 .sort {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-start;
-	align-items: center;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding: 30px 6%;
 }
 
@@ -794,8 +873,13 @@ input[type="checkbox"]:disabled + label {
 }
 
 .sort-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	
 	margin: 0;	
 	padding: 0;	
@@ -863,10 +947,14 @@ input[type="checkbox"]:disabled + label {
 }
 
 .result-items li {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	height: 151px;
 	
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	
+	        box-sizing: border-box;
 	
 	padding: 30px 6%;
 	
@@ -880,18 +968,24 @@ input[type="checkbox"]:disabled + label {
 .description-item {
 	width: 780px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
+	display: -webkit-box;
+	
+	display: -ms-flexbox;
+	
 	display: flex;
-	align-content: space-between;
-	flex-wrap: wrap;
+	-ms-flex-line-pack: justify;
+	    align-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 
 	padding: 0 30px;
 }
 
 .item-title {
-	flex-basis: 100%;
+	-ms-flex-preferred-size: 100%;
+	    flex-basis: 100%;
 	
 	margin-bottom: auto;
 }
@@ -929,7 +1023,6 @@ input[type="checkbox"]:disabled + label {
 	margin-top: 14px;
 	padding: 3px 17px;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	font: inherit;
@@ -966,9 +1059,16 @@ input[type="checkbox"]:disabled + label {
 
 .rating-item {
 	margin-left: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;	
-	align-items: flex-end;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;	
+	-webkit-box-align: end;	
+	    -ms-flex-align: end;	
+	        align-items: flex-end;
 }
 
 .star-rating {
@@ -988,8 +1088,14 @@ input[type="checkbox"]:disabled + label {
 /****************************************************************************/
 
 .main-footer {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	position: relative;
+	z-index: 10;
 	
 	margin-top: -118px;
 	
@@ -1003,7 +1109,6 @@ input[type="checkbox"]:disabled + label {
 .footer-hashtag {
 	width: 20%;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 45px 0;
@@ -1017,13 +1122,19 @@ input[type="checkbox"]:disabled + label {
 }
 
 .footer-social {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	
 	width: 33.3%;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 36px 0;
@@ -1037,9 +1148,15 @@ input[type="checkbox"]:disabled + label {
 }
 
 .social-btn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 	
 	width: 46px;
 	height: 48px;
@@ -1064,13 +1181,18 @@ input[type="checkbox"]:disabled + label {
 
 
 .footer-copyright {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	
 	width: 20%;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	margin-right: 6%;
@@ -1093,7 +1215,6 @@ input[type="checkbox"]:disabled + label {
 .copyright-logo:active path {
 	fill: #bdbbbc;
 }
-
 
 
 
