--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,7 @@ input[type="radio"].invisible,
 
   white-space: nowrap;
 
-  -webkit-clip-path: inset(100%);
-
-          clip-path: inset(100%);
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -88,16 +86,13 @@ input {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
+	transform: translateX(-50%);
 }
 
 .site-nav {
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
+
+	width: 100%;
 	margin: 0;
 	padding: 0;
 		
@@ -156,8 +151,7 @@ input {
 .intro {
 	height: 508px;
 	padding-top: 76px;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	
 	text-align: center;
 	
@@ -200,14 +194,9 @@ input {
 /****************************************************************************/
 
 .feature-list {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;	
-	-webkit-box-pack: center;	
-	    -ms-flex-pack: center;	
-	        justify-content: center;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	justify-content: center;
+	flex-wrap: wrap;
 	
 	margin: 0;	
 	padding: 0;
@@ -223,19 +212,10 @@ input {
 .feature-list > li {
 	width: 100%;
 	min-height: 256px;
-	
-	display: -webkit-box;
-	
-	display: -ms-flexbox;
-	
-	display: flex;	
-	-webkit-box-pack: justify;	
-	    -ms-flex-pack: justify;	
-	        justify-content: space-between;
 }
 
 .feature-list h3 {
-	margin: 0 18% 25px;
+	margin: 0 10% 25px;
 	
 	font-size: 21px;
   font-weight: 600;
@@ -249,20 +229,28 @@ input {
 /****************************************************************************/
 
 .wide-feature-item {
+	display: flex;	
+  justify-content: space-between;
+	
   color: #fff;
-  
   background-color: #81b3d2;
 }
 
+.feature-list .normal-feature-item {
+	display: flex;	
+	flex-direction: column;
+	width: 33%;
+	box-sizing: border-box;
+	
+	padding: 46px 4% 60px;
+}
+
 .wide-feature-item:nth-child(3) .feature-item-text {
-	-webkit-box-ordinal-group: 3;
-	    -ms-flex-order: 2;
-	        order: 2;
+	order: 2;
 }
 
 .feature-item-text {
 	width: 33%;
-		-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 46px 4% 60px;
@@ -272,19 +260,15 @@ input {
 .normal-feature-item p:first-of-type {
 	margin-bottom: 21px;
 }
+
 .wide-feature-item img {
 	width: 66%;
 }
 /****************************************************************************/
 
-
 .advice-list {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	justify-content: space-between;
 	padding: 0;
 
 	background-color: #fff;
@@ -292,24 +276,17 @@ input {
 }
 
 .advice-list li {
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	flex-direction: column;
+	align-items: center;
 	
 	position: relative;
 
 	width: 33%;
 	min-height: 330px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 160px 50px 82px;
+	
 }
 
 .advice-list li:first-child::before {
@@ -320,9 +297,7 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
+	transform: translateX(-50%);
 	
 	background-image: url("../img/house.svg");
 	background-repeat: no-repeat;
@@ -336,9 +311,7 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
+	transform: translateX(-50%);
 	
 	background-image: url("../img/burger.svg");
 	background-repeat: no-repeat;
@@ -352,29 +325,21 @@ input {
 	
 	top: 18%;
 	left: 50%;
-	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
+	transform: translateX(-50%);
 	
 	background-image: url("../img/gift.svg");
 	background-repeat: no-repeat;
 }
 
-/****************************************************************************/
 
+/****************************************************************************/
+/*
 li.normal-feature-item {
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
 	
-	width: 33%;	
-	-webkit-box-sizing: border-box;
+	width: 33%;
 	box-sizing: border-box;
 	
 	padding: 46px 90px 60px;
@@ -383,14 +348,13 @@ li.normal-feature-item {
 .normal-feature-item h3{
 	margin: 0 30px 25px;
 }
-
+*/
 /**************************************************************************/
 
 
 .hotel-search {
 	width: 100%;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	
 	padding-top: 50px;
 	
@@ -414,23 +378,14 @@ li.normal-feature-item {
 }
 
 .hotel-search-wrapper {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	flex-direction: column;
+	align-items: center;
 	
 	position: relative;
 	
 	margin: 0 auto;
 	padding: 0;
-	
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -458,19 +413,11 @@ li.normal-feature-item {
 	left: 50%;
 	margin-left: -284px;
 	
-	display: -webkit-box;
-	
-	display: -ms-flexbox;
-	
 	display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	justify-content: space-between;
+	flex-wrap: wrap;
 	
 	width: 568px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 56px 55px;
@@ -480,17 +427,12 @@ li.normal-feature-item {
   font-weight: 600;
 	
 	background-color: #fff;
-	-webkit-box-shadow: 0 7px 15px rgba(0,1,1,0.15);
-	        box-shadow: 0 7px 15px rgba(0,1,1,0.15);
+	box-shadow: 0 7px 15px rgba(0,1,1,0.15);
 }
 
 .hotel-search-item {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	align-items: center;
 	
 	width: 460px;
 	height: 38px;
@@ -519,7 +461,6 @@ li.normal-feature-item {
 .hotel-search-item input {
 	width: 308px;
 	height: 38px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 0 13px;
@@ -551,19 +492,12 @@ li.normal-feature-item {
 }
 
 .form-btn {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	justify-content: center;
+	align-items: center;
 	
 	width: 38px;
 	height: 38px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 0;
@@ -588,7 +522,6 @@ li.normal-feature-item {
 
 .search-btn {
 	width: 100%;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 16px;
@@ -630,12 +563,8 @@ li.normal-feature-item {
 }
 
 .filter-form {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	justify-content: space-between;
 	
 	padding: 27px 6% 32px;
 	color: #fff;
@@ -743,9 +672,7 @@ input[type="checkbox"]:disabled + label {
 	
 	top: 50%;
 	left: 50%;
-	-webkit-transform: translate(50%,-50%);
-	    -ms-transform: translate(50%,-50%);
-	        transform: translate(50%,-50%);
+	transform: translate(50%,-50%);
 	
 	background-color: #fff;
 }
@@ -803,8 +730,7 @@ input[type="checkbox"]:disabled + label {
 	background-color: #ababab;	
 	border: 8px solid #fff;
 	border-radius: 50%;
-	-webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-	        box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -845,15 +771,9 @@ input[type="checkbox"]:disabled + label {
 }
 
 .sort {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: start;
-	    -ms-flex-pack: start;
-	        justify-content: flex-start;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	justify-content: flex-start;
+	align-items: center;
 	padding: 30px 6%;
 }
 
@@ -873,13 +793,8 @@ input[type="checkbox"]:disabled + label {
 }
 
 .sort-list {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
+	flex-direction: row;
 	
 	margin: 0;	
 	padding: 0;	
@@ -947,14 +862,10 @@ input[type="checkbox"]:disabled + label {
 }
 
 .result-items li {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
 	height: 151px;
 	
-	-webkit-box-sizing: border-box;
-	
-	        box-sizing: border-box;
+	box-sizing: border-box;
 	
 	padding: 30px 6%;
 	
@@ -967,25 +878,17 @@ input[type="checkbox"]:disabled + label {
 
 .description-item {
 	width: 780px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
-	display: -webkit-box;
-	
-	display: -ms-flexbox;
-	
 	display: flex;
-	-ms-flex-line-pack: justify;
-	    align-content: space-between;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
+	align-content: space-between;
+	flex-wrap: wrap;
 
 	padding: 0 30px;
 }
 
 .item-title {
-	-ms-flex-preferred-size: 100%;
-	    flex-basis: 100%;
+	flex-basis: 100%;
 	
 	margin-bottom: auto;
 }
@@ -1022,7 +925,6 @@ input[type="checkbox"]:disabled + label {
 .booking-btn {
 	margin-top: 14px;
 	padding: 3px 17px;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	font: inherit;
@@ -1058,17 +960,11 @@ input[type="checkbox"]:disabled + label {
 /****************************************************************************/
 
 .rating-item {
-	margin-left: auto;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;	
-	-webkit-box-align: end;	
-	    -ms-flex-align: end;	
-	        align-items: flex-end;
+	flex-direction: column;	
+	align-items: flex-end;
+	
+  margin-left: auto;
 }
 
 .star-rating {
@@ -1088,12 +984,8 @@ input[type="checkbox"]:disabled + label {
 /****************************************************************************/
 
 .main-footer {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	justify-content: space-between;
 	position: relative;
 	z-index: 10;
 	
@@ -1108,7 +1000,6 @@ input[type="checkbox"]:disabled + label {
 
 .footer-hashtag {
 	width: 20%;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 45px 0;
@@ -1122,19 +1013,11 @@ input[type="checkbox"]:disabled + label {
 }
 
 .footer-social {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	flex-direction: row;
+	justify-content: center;
 	
 	width: 33.3%;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	padding: 36px 0;
@@ -1148,15 +1031,9 @@ input[type="checkbox"]:disabled + label {
 }
 
 .social-btn {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 	
 	width: 46px;
 	height: 48px;
@@ -1181,18 +1058,11 @@ input[type="checkbox"]:disabled + label {
 
 
 .footer-copyright {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	justify-content: center;
+	align-items: center;
 	
 	width: 20%;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	margin-right: 6%;
@@ -1215,7 +1085,6 @@ input[type="checkbox"]:disabled + label {
 .copyright-logo:active path {
 	fill: #bdbbbc;
 }
-
 
 
 
