--- a/css/style.css
+++ b/css/style.css
@@ -622,16 +622,24 @@ input[type="checkbox"]:checked + label::before{
 	background-image: url("../img/checkbox-on.svg");
 }
 
+input[type="checkbox"] + label::before {
+		width: 27px;
+}
+
+input[type="checkbox"]:not(:checked) + label::before {
+		width: 23px;
+}
+
 input[type="checkbox"]:not(:checked) + label::before,
 input[type="checkbox"]:checked + label::before{
 	content: "";
 	
 	position: absolute;
-	width: 27px;
 	height: 23px;
 	
 	top: 0;
 	left: 0;
+	text-align: left;
 
 	background-repeat: no-repeat;
 	background-position: center;
@@ -643,6 +651,7 @@ input[type="checkbox"]:focus + label::before {
 
 input[type="checkbox"]:disabled + label::before,
 input[type="checkbox"]:disabled + label {
+	width: 23px;
   opacity: 0.5;
 	cursor: default;
 }
@@ -677,14 +686,16 @@ input[type="checkbox"]:disabled + label {
 	background-color: #fff;
 }
 
-.price-controls label {
+.price-controls .min-price,
+.price-controls .max-price {
 	display: inline-block;
+	
+	width: 80px;
+	margin-left: 65px;
 	
 	vertical-align: top;
 	font-size: 14px;
 	line-height: 34px;
-	
-	cursor: pointer;
 }
 
 .price-controls input{
@@ -693,15 +704,10 @@ input[type="checkbox"]:disabled + label {
 	
 	font: inherit;
 	color: inherit;
-	
 	border: none;
 	background: none;
-}
-
-.price-controls .min-price,
-.price-controls .max-price {
-	width: 80px;
-	margin-left: 65px;
+	
+	line-height: 34px;
 }
 
 .range-controls {
@@ -766,9 +772,6 @@ input[type="checkbox"]:disabled + label {
 }
 
 /********************************results*********************************/
-
-.result {
-}
 
 .sort {
 	display: flex;
